--- a/src/Dotnet9.Web/wwwroot/css/blogpost.css
+++ b/src/Dotnet9.Web/wwwroot/css/blogpost.css
@@ -211,7 +211,7 @@
     padding: 5px 9px;
     font-size: 12px;
     font-weight: normal;
-    text-align: center;
+    text-align: left;
     word-break: break-all;
 }
 
