--- a/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
+++ b/src/Dotnet9.Web/Views/BlogPost/Index.cshtml
@@ -9,12 +9,12 @@
 }
 
 @section Headers {
-    <script src="~/skin/menhu/js/hc-sticky.js"></script>
+    @*<script src="~/skin/menhu/js/hc-sticky.js"></script>
     <script src="~/skin/menhu/js/aside-sticky.js"></script>
-    <script src="~/skin/menhu/js/side-tab.js"></script>
+    <script src="~/skin/menhu/js/side-tab.js"></script>*@
     <link href="~/skin/menhu/css/picswiper.min.css" rel="stylesheet">
     <script src="~/skin/menhu/js/picswiper.min.js"></script>
-    <script src="~/skin/menhu/js/picview.js"></script>
+    @*<script src="~/skin/menhu/js/picview.js"></script>*@
     
     <link rel="stylesheet" href="~/css/blogpost.css"/>
     <link rel="stylesheet" href="~/css/prism.css"/>
