--- a/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts4/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts4/Default.cshtml
@@ -44,7 +44,7 @@
                                         </a>
 
                                         <small style="text-align: left;">
-                                            <a style="display: inline;" href="/user/@(blogPost.Original ?? "沙漠尽头的狼")">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd")
+                                            <a style="display: inline;" href="#">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd")
                                         </small>
                                     </li>
                                     isSet = true;
