--- a/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts3/Default.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Components/WordBlogPosts3/Default.cshtml
@@ -41,7 +41,7 @@
                                             <p>@blogPost.BriefDescription</p>
                                             
                                             <small style="text-align: left;">
-                                                <a style="display: inline;" href="/user/@(blogPost.Original ?? "沙漠尽头的狼")">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd")
+                                                <a style="display: inline;" href="#">@(blogPost.Original ?? "沙漠尽头的狼")</a> - @blogPost.CreateDate?.ToString("yyyy-MM-dd")
                                             </small>
                                         </section>
                                     </li>
