--- a/src/Dotnet9.Web/Views/Shared/Public/Footer.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Public/Footer.cshtml
@@ -3,10 +3,13 @@
         <div class="wxbox">
             <ul>
                 <li>
-                    <img src="https://img1.dotnet9.com/site/wechatpublic.jpg"><span>微信公众号</span>
+                    <img src="https://img1.dotnet9.com/site/wechatpublic.jpg"><span>微信公众号1</span>
                 </li>
                 <li>
-                    <img src="https://img1.dotnet9.com/site/wechatowner.jpg"><span>我的微信</span>
+                    <img src="https://img1.dotnet9.com/lequ.co/8cm.jpg"><span>微信公众号2</span>
+                </li>
+                <li>
+                    <img src="https://img1.dotnet9.com/site/wechatowner.jpg"><span>本站站长</span>
                 </li>
             </ul>
         </div>
