--- a/src/Dotnet9.Web/Views/Shared/Public/QueryForm.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Public/QueryForm.cshtml
@@ -1,5 +1,5 @@
 ﻿<form method="get" asp-controller="BlogPost" asp-action="Query" role="form" name="searchform" id="searchform">
-    <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
+    <input name="keyword" id="keyword" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
     <input name="show" value="title" type="hidden">
     <input name="tempid" value="1" type="hidden">
     <input name="tbname" value="news" type="hidden">
