--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -17,7 +17,7 @@
     <div class="logo-section box">
         <div class="search">
             <form method="get" asp-controller="BlogPost" asp-action="Query" role="form" name="searchform" id="searchform">
-                <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
+                <input name="keyword" id="keyword" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
                 <input name="show" value="title" type="hidden">
                 <input name="tempid" value="1" type="hidden">
                 <input name="tbname" value="news" type="hidden">
@@ -49,7 +49,7 @@
         <div class="go-left"></div>
         <div class="search">
             <form method="get" asp-controller="BlogPost" asp-action="Query" role="form" name="searchform" id="searchform">
-                <input name="keyboard" id="keyboard" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
+                <input name="keyword" id="keyword" class="input_text" value="请输入关键字词" style="color: rgb(153, 153, 153);" onfocus="if (value == '请输入关键字词') { this.style.color = '#000';value = '' }" onblur="if (value == '') { this.style.color = '#999';value = '请输入关键字词' }" type="text">
                 <input name="show" value="title" type="hidden">
                 <input name="tempid" value="1" type="hidden">
                 <input name="tbname" value="news" type="hidden">
@@ -61,16 +61,16 @@
             <p>热门搜索排行</p>
             <ul class="search-paihang">
                 <li>
-                    <a href="/q?keyboard='WPF'"><i>1</i>WPF</a>
+                    <a href="/q?keyword='WPF'"><i>1</i>WPF</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='Winform'"><i>2</i>Winform</a>
+                    <a href="/q?keyword='Winform'"><i>2</i>Winform</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='MAUI'"><i>3</i>MAUI</a>
+                    <a href="/q?keyword='MAUI'"><i>3</i>MAUI</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='vue'"><i>4</i>vue 3.0</a>
+                    <a href="/q?keyword='vue'"><i>4</i>vue 3.0</a>
                 </li>
 
             </ul>
@@ -79,16 +79,16 @@
             <p>最新搜索排行</p>
             <ul class="search-paihang">
                 <li>
-                    <a href="/q?keyboard='WPF'"><i>1</i>WPF</a>
+                    <a href="/q?keyword='WPF'"><i>1</i>WPF</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='Winform'"><i>2</i>Winform</a>
+                    <a href="/q?keyword='Winform'"><i>2</i>Winform</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='MAUI'"><i>3</i>MAUI</a>
+                    <a href="/q?keyword='MAUI'"><i>3</i>MAUI</a>
                 </li>
                 <li>
-                    <a href="/q?keyboard='vue'"><i>4</i>vue 3.0</a>
+                    <a href="/q?keyword='vue'"><i>4</i>vue 3.0</a>
                 </li>
 
             </ul>
@@ -161,7 +161,7 @@
 </body>
 </html>
 
-            
+
 <script src="~/skin/menhu/js/jquery-1.8.3.min.js"></script>
 <script src="~/skin/menhu/js/main.js"></script>
 <script src="~/skin/menhu/js/swiper.min.js"></script>
