--- a/src/Dotnet9.Admin/Pages/FetchData.razor
+++ b/src/Dotnet9.Admin/Pages/FetchData.razor
@@ -1,6 +1,7 @@
 ﻿@page "/fetchdata"
 
-@using Dotnet9.Admin.Data
+<PageTitle>Weather forecast</PageTitle>
+
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
@@ -9,38 +10,41 @@
 
 @if (forecasts == null)
 {
-	<p><em>Loading...</em></p>
+    <p>
+        <em>Loading...</em>
+    </p>
 }
 else
 {
-	<table class="table">
-		<thead>
-			<tr>
-				<th>Date</th>
-				<th>Temp. (C)</th>
-				<th>Temp. (F)</th>
-				<th>Summary</th>
-			</tr>
-		</thead>
-		<tbody>
-			@foreach (var forecast in forecasts)
-			{
-				<tr>
-					<td>@forecast.Date.ToShortDateString()</td>
-					<td>@forecast.TemperatureC</td>
-					<td>@forecast.TemperatureF</td>
-					<td>@forecast.Summary</td>
-				</tr>
-			}
-		</tbody>
-	</table>
+    <MDataTable Headers="_headers" Items="forecasts" ItemsPerPage="5" Class="elevation-1">
+        <ItemColContent>
+            @if (context.Header.Value == nameof(WeatherForecast.Date))
+            {
+                @context.Item.Date.ToShortDateString()
+            }
+            else
+            {
+                @context.Value
+            }
+        </ItemColContent>
+    </MDataTable>
 }
 
 @code {
-	private WeatherForecast[] forecasts;
 
-	protected override async Task OnInitializedAsync()
-	{
-		forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
-	}
+    private readonly List<DataTableHeader<WeatherForecast>> _headers = new()
+    {
+        new() { Text = "Date", Value = nameof(WeatherForecast.Date) },
+        new() { Text = "Temp. (C)", Value = nameof(WeatherForecast.TemperatureC) },
+        new() { Text = "Temp. (F)", Value = nameof(WeatherForecast.TemperatureF) },
+        new() { Text = "Summary", Value = nameof(WeatherForecast.Summary), Sortable = false }
+    };
+
+    private WeatherForecast[]? forecasts;
+
+    protected override async Task OnInitializedAsync()
+    {
+        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+    }
+
 }
