--- a/src/Dotnet9.Admin/_Imports.razor
+++ b/src/Dotnet9.Admin/_Imports.razor
@@ -4,7 +4,8 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Dotnet9.Admin
-@using Dotnet9.Admin.Shared
 @using BlazorComponent
 @using Masa.Blazor
+@using Dotnet9.Admin
+@using Dotnet9.Admin.Data
+@using Dotnet9.Admin.Shared
