--- a/src/Dotnet9.Admin/Pages/Counter.razor
+++ b/src/Dotnet9.Admin/Pages/Counter.razor
@@ -4,13 +4,14 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<MButton Depressed Color="error" OnClick="IncrementCount">点击我</MButton>
 
 @code {
-    private int currentCount = 0;
+    private int currentCount;
 
     private void IncrementCount()
     {
         currentCount++;
     }
+
 }
