--- a/src/Dotnet9.Admin/Shared/MainLayout.razor
+++ b/src/Dotnet9.Admin/Shared/MainLayout.razor
@@ -1,60 +1,37 @@
 ﻿@inherits LayoutComponentBase
 
 <MApp>
-    <MToolbar MaxHeight="64" Color="@_color" Dark>
-        <MAppBarNavIcon></MAppBarNavIcon>
+    <MAppBar Flat App Color="white" Class="m-bar--underline">
+        <span>Masa.Framework</span>
         <MSpacer></MSpacer>
-        Timeline
-        <MSpacer></MSpacer>
-        <MMenu Left
-               OffsetY
-               Transition="slide-x-transition"
-               Bottom>
-            <ActivatorContent>
-                <MButton Icon @attributes="@context.Attrs">
-                    <MIcon>mdi-dots-vertical</MIcon>
-                </MButton>
-            </ActivatorContent>
-            <ChildContent>
-                <MList>
-                    @foreach (var item in _colors)
-                    {
-                        <MListItem OnClick="()=>{_color = item.Value;}">
-                            <MListItemTitle>@item.Text</MListItemTitle>
-                        </MListItem>
-                    }
-                </MList>
-            </ChildContent>
-        </MMenu>
-    </MToolbar>
-
-    <div style="width:100%; height:100%">
-        <CascadingValue Value="_color">
-            @Body
-        </CascadingValue>
-    </div>
-
-    <MFooter Color="#FAFAFA" Elevation="2">
-        <MRow NoGutters Justify="JustifyTypes.SpaceBetween">
-            <MCol Style="display:flex; justify-content:center;">
-                <MButton Color="@_color" Icon Class="my-2 white--text">
-                    <MBadge OverLap Color="error" Content="6">
-                        <ChildContent>
-                            <MIcon>mdi-chat</MIcon>
-                        </ChildContent>
-                    </MBadge>
-                </MButton>
-            </MCol>
-            <MCol Style="display:flex; justify-content:center;">
-                <MButton Color="@_color" Icon Class="my-2 white--text">
-                    <MIcon>mdi-account-details</MIcon>
-                </MButton>
-            </MCol>
-            <MCol Style="display:flex; justify-content:center;">
-                <MButton Color="@_color" Icon Class="my-2 white--text">
-                    <MIcon>mdi-compass</MIcon>
-                </MButton>
-            </MCol>
-        </MRow>
-    </MFooter>
+        <MButton Text>
+            <a href="https://blazor.masastack.com/">About</a>
+        </MButton>
+    </MAppBar>
+    <MNavigationDrawer Permanent App>
+        <MList Dense Nav>
+            <MListItem Link Href="/">
+                <MListItemContent>
+                    <MListItemTitle>Home</MListItemTitle>
+                </MListItemContent>
+            </MListItem>
+            <MListItem Link Href="counter">
+                <MListItemContent>
+                    <MListItemTitle>Counter</MListItemTitle>
+                </MListItemContent>
+            </MListItem>
+            <MListItem Link Href="fetchdata">
+                <MListItemContent>
+                    <MListItemTitle>Fetch data</MListItemTitle>
+                </MListItemContent>
+            </MListItem>
+        </MList>
+    </MNavigationDrawer>
+    <MMain>
+        <MContainer Fluid>
+            <CascadingValue Value="this">
+                @Body
+            </CascadingValue>
+        </MContainer>
+    </MMain>
 </MApp>
