--- a/src/Dotnet9.Admin/Shared/SurveyPrompt.razor
+++ b/src/Dotnet9.Admin/Shared/SurveyPrompt.razor
@@ -12,5 +12,6 @@
 @code {
     // Demonstrates how a parent component can supply parameters
     [Parameter]
-    public string Title { get; set; }
+    public string? Title { get; set; }
+
 }
