三个后台项目共用一个razor UI类库成功；

--- a/src/Dotnet9.MAUI/_Imports.razor
+++ b/src/Dotnet9.MAUI/_Imports.razor
@@ -5,4 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Dotnet9.MAUI
-@using Dotnet9.MAUI.Shared
+@using Dotnet9.WebApp
+@using Dotnet9.WebApp.Shared
