--- a/src/Dotnet9.Server/_Imports.razor
+++ b/src/Dotnet9.Server/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Dotnet9.Server
-@using Dotnet9.Server.Shared
+@using Dotnet9.WebApp
+@using Dotnet9.WebApp.Shared
