--- a/src/Dotnet9.MAUI/MainPage.xaml
+++ b/src/Dotnet9.MAUI/MainPage.xaml
@@ -1,13 +1,14 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
+
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:Dotnet9.MAUI"
+             xmlns:webApp="clr-namespace:Dotnet9.WebApp;assembly=Dotnet9.WebApp"
              x:Class="Dotnet9.MAUI.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
     <BlazorWebView HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Main}" />
+            <RootComponent Selector="#app" ComponentType="{x:Type webApp:Main}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
