--- a/src/Dotnet9.Server/Pages/_Host.cshtml
+++ b/src/Dotnet9.Server/Pages/_Host.cshtml
@@ -1,8 +1,10 @@
 ﻿@page "/"
+@using Dotnet9.WebApp
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @namespace Dotnet9.Server.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @{
     Layout = "_Layout";
 }
 
-<component type="typeof(App)" render-mode="ServerPrerendered" />
+<component type="typeof(Main)" render-mode="ServerPrerendered"/>
