--- a/src/Dotnet9.Wasm/_Imports.razor
+++ b/src/Dotnet9.Wasm/_Imports.razor
@@ -7,4 +7,5 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Dotnet9.Wasm
-@using Dotnet9.Wasm.Shared
+@using Dotnet9.WebApp
+@using Dotnet9.WebApp.Shared
