--- a/src/Dotnet9.WebApp/_Imports.razor
+++ b/src/Dotnet9.WebApp/_Imports.razor
@@ -5,5 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using Masa.Blazor
 @using Dotnet9.WebApp
 @using Dotnet9.WebApp.Shared
+@using Dotnet9.Core
