--- a/src/Dotnet9.Server/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Server/Pages/_Layout.cshtml
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="Dotnet9.Server.styles.css" rel="stylesheet"/>
+
+    <!-- masa blazor css style -->
+    <link href="_content/Masa.Blazor/css/masa-blazor.css" rel="stylesheet"/>
+    <link href="_content/Masa.Blazor/css/masa-extend-blazor.css" rel="stylesheet"/>
+
+    <!--icon file,import need to use-->
+    <link href="https://cdn.masastack.com/npm/@("@mdi")/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.masastack.com/npm/materialicons/materialicons.css" rel="stylesheet">
+    <link href="https://cdn.masastack.com/npm/fontawesome/v5.0.13/css/all.css" rel="stylesheet">
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
@@ -27,6 +37,8 @@
     <a class="dismiss">🗙</a>
 </div>
 
+<!--js(should lay the end of file)-->
+<script src="_content/BlazorComponent/js/blazor-component.js"></script>
 <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
