--- a/src/Dotnet9.WebApp/Shared/MainLayout.razor
+++ b/src/Dotnet9.WebApp/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <a href="https://docs.microsoft.com/aspnet/" target="_blank">关于</a>
         </div>
 
         <article class="content px-4">
