--- a/src/Dotnet9.WebApp/Shared/MainLayout.razor
+++ b/src/Dotnet9.WebApp/Shared/MainLayout.razor
@@ -1,17 +1,81 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu/>
-    </div>
+<MApp>
+    <MCard Class="overflow-hidden">
+        <MAppBar Absolute
+                 Color="#6A76AB"
+                 Dark
+                 ShrinkOnScroll
+                 Prominent
+                 Src="https://picsum.photos/1920/1080?random"
+                 FadeImgOnScroll
+                 ScrollTarget="#scrolling-techniques-4">
+            <ImgContent>
+                <MImage @attributes="@context"
+                        Gradient="to top right, rgba(100,115,201,.7), rgba(25,32,72,.7)">
+                </MImage>
+            </ImgContent>
 
-    <main>
-        <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">关于</a>
-        </div>
+            <ChildContent>
+                <MAppBarNavIcon></MAppBarNavIcon>
 
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
+                <MToolbarTitle>Title</MToolbarTitle>
+
+                <MSpacer></MSpacer>
+
+                <MButton Icon>
+                    <MIcon>mdi-magnify</MIcon>
+                </MButton>
+
+                <MButton Icon>
+                    <MIcon>mdi-heart</MIcon>
+                </MButton>
+
+                <MMenu Bottom
+                       Left>
+                    <ActivatorContent>
+                        <MButton Icon
+                                 Color="yellow"
+                                 @attributes="@context.Attrs">
+                            <MIcon>mdi-dots-vertical</MIcon>
+                        </MButton>
+                    </ActivatorContent>
+
+                    <ChildContent>
+                        <MList>
+                            @foreach (var item in items)
+                            {
+                                <MListItem>
+                                    <MListItemTitle>@item</MListItemTitle>
+                                </MListItem>
+                            }
+                        </MList>
+                    </ChildContent>
+                </MMenu>
+            </ChildContent>
+
+            <ExtensionContent>
+                <MTabs AlignWithTitle>
+                    <MTab>首页</MTab>
+                    <MTab>时间戳</MTab>
+                </MTabs>
+            </ExtensionContent>
+        </MAppBar>
+        <MSheet id="scrolling-techniques-4"
+                Class="overflow-y-auto"
+                MaxHeight="600">
+            <MContainer Style="height: 1000px;"></MContainer>
+        </MSheet>
+    </MCard>
+</MApp>
+@code {
+
+    readonly List<string> items = new()
+    {
+        "Click Me",
+        "Click Me",
+        "Click Me",
+        "Click Me 2",
+    };
+
+}
