恢复谷歌广告；

--- a/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/_PublicLayout.cshtml
@@ -166,6 +166,8 @@
 <script src="~/skin/menhu/js/main.js"></script>
 <script src="~/skin/menhu/js/swiper.min.js"></script>
 <script src="~/skin/menhu/js/banner.js"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+        crossorigin="anonymous"></script>
 
 <script>
     var _hmt = _hmt || [];
