参考masa pro修改blazor后台前端部分；

--- a/src/Dotnet9.MAUI/MainPage.xaml
+++ b/src/Dotnet9.MAUI/MainPage.xaml
@@ -8,7 +8,7 @@
 
     <BlazorWebView HostPage="wwwroot/index.html">
         <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type webApp:Main}" />
+            <RootComponent Selector="#app" ComponentType="{x:Type webApp:App}" />
         </BlazorWebView.RootComponents>
     </BlazorWebView>
 
