--- a/src/Dotnet9.Server/Pages/_Host.cshtml
+++ b/src/Dotnet9.Server/Pages/_Host.cshtml
@@ -7,4 +7,4 @@
     Layout = "_Layout";
 }
 
-<component type="typeof(Main)" render-mode="ServerPrerendered"/>
+<component type="typeof(App)" render-mode="ServerPrerendered"/>
