--- a/src/Dotnet9.WebApp/_Imports.razor
+++ b/src/Dotnet9.WebApp/_Imports.razor
@@ -1,11 +1,11 @@
-﻿@using System.Net.Http
-@using Microsoft.AspNetCore.Authorization
-@using Microsoft.AspNetCore.Components.Forms
-@using Microsoft.AspNetCore.Components.Routing
+﻿@using BlazorComponent
 @using Microsoft.AspNetCore.Components.Web
-@using Microsoft.AspNetCore.Components.Web.Virtualization
-@using Microsoft.JSInterop
+@using System.Net.Http
 @using Masa.Blazor
 @using Dotnet9.WebApp
+@using Dotnet9.WebApp.Global
 @using Dotnet9.WebApp.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.JSInterop
 @using Dotnet9.Core
