--- a/src/Dotnet9.WebApp/_Imports.razor
+++ b/src/Dotnet9.WebApp/_Imports.razor
@@ -3,6 +3,7 @@
 @using System.Net.Http
 @using Masa.Blazor
 @using Dotnet9.WebApp
+@using Dotnet9.WebApp.Data.Base
 @using Dotnet9.WebApp.Global
 @using Dotnet9.WebApp.Shared
 @using Microsoft.AspNetCore.Components.Authorization
