--- a/src/Dotnet9.WebApp/Shared/Navigation.razor
+++ b/src/Dotnet9.WebApp/Shared/Navigation.razor
@@ -11,10 +11,70 @@
         }
         else
         {
-            <img height="48" class="hover-pointer" src="https://dotnet9.com/logo-head-dark.png" />
+            <img height="48" class="hover-pointer" src="https://dotnet9.com/logo-head-dark.png"/>
         }
     </div>
+
+    <MList>
+        @foreach (var nav in NavHelper.Navs)
+        {
+            if (nav.Children is not {Length: > 0 })
+            {
+                <MBorder Value="false" Offset Width="4" Class="rounded-r-1" Border="Borders.Right">
+                    <MListItem Ripple="false" Class="mb-4" ActiveClass="fill-lighten-1" Href="@nav.Href">
+                        <ItemContent>
+                            @if (context.Active)
+                            {
+                                NavHelper.RefreshRender(nav);
+                            }
+                            <MListItemIcon>
+                                <MIcon Color="@(context.Active ? "primary" : "neutral-lighten-2")" Size="20">@nav.Icon</MIcon>
+                            </MListItemIcon>
+                            <MListItemContent>
+                                <div style="margin-left: 6.5px;" class="text-truncate white-space:nowrap @(context.Active ? "text-subtitle" : "text-body neutral-lighten-2--text")">@nav.Title</div>
+                            </MListItemContent>
+                        </ItemContent>
+                    </MListItem>
+                </MBorder>
+            }
+            else
+            {
+                <MListGroup Group="@nav.Children.Select(n => n.Href).ToList()" Class="mb-4" PrependIcon="@nav.Icon" NoAction ActiveClass="primaryText" AppendIcon="M8.33398 10.3335L12.5007 14.5002L16.6673 10.3335H8.33398Z">
+                    <ActivatorContent>
+                        <MListItemContent>
+                            <div style="margin-left: 6.5px" class="text-truncate white-space:nowrap">@nav.Title</div>
+                        </MListItemContent>
+                    </ActivatorContent>
+                    <ChildContent>
+                        @foreach (var navChild in nav.Children)
+                        {
+                            <MBorder Value="false" Offset Width="4" Class="rounded-r-1" Border="Borders.Right">
+                                <MListItem Ripple="false" ActiveClass="File-lighten-1" Link Href="@navChild.Href">
+                                    <ItemContent>
+                                        @if (context.Active)
+                                        {
+                                            NavHelper.RefreshRender(navChild);
+                                        }
+                                        <MListItemContent>
+                                            <div class="text-truncate white-space:nowrap @(context.Active ? "text-subtitle2" : "text-btn neutral-lighten-2--text")">@navChild.Title</div>
+                                        </MListItemContent>
+                                    </ItemContent>
+                                </MListItem>
+                            </MBorder>
+                        }
+                    </ChildContent>
+                </MListGroup>
+            }
+        }
+    </MList>
+
 </MNavigationDrawer>
+
+<MButton Small Fab Color="primary" Style="@($"bottom:58px;z-index:7;position: fixed;{(GlobalConfig.NavigationMini ? "left:60px;" : "left:280px;")}")" OnClick="() => { GlobalConfig.ExpandOnHover = !GlobalConfig.ExpandOnHover; }">
+    <MIcon Class="white--text">
+        @(GlobalConfig.NavigationMini ? "mdi-chevron-right" : "mdi-chevron-left")
+    </MIcon>
+</MButton>
 
 @code {
 
