--- a/src/Dotnet9.Web/Views/Tag/Index.cshtml
+++ b/src/Dotnet9.Web/Views/Tag/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Net
-@model Dotnet9.Application.Contracts.Tags.TagViewModel
+﻿@model TagViewModel
 @{
     ViewData["Title"] = "标签云";
     Layout = "~/Views/Shared/_PublicLayout.cshtml";
@@ -11,7 +10,6 @@
         "#66CDAA", "#00CED1", "#9F79EE", "#CD3333", "#FFC125", "#32CD32",
         "#00BFFF", "#68A2D5", "#FF69B4", "#DB7093", "#CD3278", "#607B8B"
     };
-    var random = new Random(DateTimeOffset.Now.Millisecond);
 }
 
 @section Headers {
@@ -25,7 +23,7 @@
     {
         @foreach (var tag in Model.Tags)
         {
-            <a href="/tag/@WebUtility.UrlEncode(tag.Name)" alt="@tag.Name" style="height: 30px; margin: 12px 5px; background-color: @(buttonsClasses[random.Next(buttonsClasses.Length)]);">
+            <a href="/tag/@WebUtility.UrlEncode(tag.Name)" alt="@tag.Name" style="background-color: @(buttonsClasses[Random.Shared.Next(buttonsClasses.Length)]); height: 30px; margin: 12px 5px;">
                 @tag.Name (@tag.BlogPostCount)
             </a>
         }
@@ -33,7 +31,7 @@
     else
     {
         <div class="pics-list-box whitebg">
-            
+
             <div class="news-title">
                 <span class="weizhi">联系请关注微信公众号：Dotnet9</span>
                 <h2>@Model.TagName</h2>
