--- a/src/Dotnet9.Web/Views/Shared/Public/Footer.cshtml
+++ b/src/Dotnet9.Web/Views/Shared/Public/Footer.cshtml
@@ -18,7 +18,7 @@
                 <b>站点声明：</b>
             </p>
             <p>2019~@DateTimeOffset.Now.Year © <a href="https://dotnet9.com">https.dotnet9.com</a> 版权所有 <a href="https://beian.miit.gov.cn/" target="_blank" rel="nofollow noopener">蜀ICP备19038256号-1</a> 由 <a href="https://dotnet.microsoft.com/zh-cn/" target="_blank" rel="noopener">.NET 7.0 </a>强力驱动 <a href="/sitemap.xml" target="_blank">网站地图</a></p>
-            <p>当您访问我们的网站、服务或工具或与之互动时，我们或我们授权的服务提供商可能会使用cookie存储信息，以帮助为您提供更好、更快和更安全的体验，并用于营销目的。</p>
+            @*<p>当您访问我们的网站、服务或工具或与之互动时，我们或我们授权的服务提供商可能会使用cookie存储信息，以帮助为您提供更好、更快和更安全的体验，并用于营销目的。</p>*@
         </div>
     </div>
 </footer>
