更新模板文件；

--- a/src/Dotnet9.Web.Go/template/layout/personal.html
+++ b/src/Dotnet9.Web.Go/template/layout/personal.html
@@ -8,7 +8,11 @@
     <ul class="personal-action">
       <li>
         <i class="iconfont icon-bilibili-line"></i>
-        <a href="{{.Bilibili}}" target="_blank"> Bilibili</a>
+        <a href="${.Bilibili}" target="_blank"> Bilibili</a>
+      </li>
+      <li>
+        <i class="iconfont icon-zhihu-circle"></i>
+        <a href="${.Zhihu}" target="_blank"> 知乎</a>
       </li>
     </ul>
   </div>
