前台首页从数据库读取成功；

--- a/src/Dotnet9.Web.Go/template/layout/pagination.html
+++ b/src/Dotnet9.Web.Go/template/layout/pagination.html
@@ -15,7 +15,7 @@
       {{end}}
       value="{{$elem}}"
     >
-      <a href="?page={{$elem}}">{{$elem}}</a>
+      <a href="?current={{$elem}}&pageSize=10">{{$elem}}</a>
     </li>
     {{end}} {{if .PageEnd}}
     <li class="pagination-next iconfont icon-jiantouyou"></li>
