--- a/src/Dotnet9.Web.Go/template/layout/post-list.html
+++ b/src/Dotnet9.Web.Go/template/layout/post-list.html
@@ -2,20 +2,22 @@
 <ul class="post-box">
   {{range $index, $elem := .Posts}}
   <li class="post-label">
-    <a href="/p/{{$elem.Pid}}.html"><h2>{{$elem.Title}}</h2></a>
-    <p>{{$elem.Content}}</p>
+    <a href="/p/{{$elem.Slug}}.html"><h2>{{$elem.Title}}</h2></a>
+    <p>{{$elem.Description}}</p>
     <div class="post-action">
       <span>
         <i class="iconfont icon-yonghu"></i>
-        &nbsp; {{$elem.UserName}}
+        &nbsp; {{$elem.Original}}
       </span>
       <span>
         <i class="iconfont icon-wenjianjia"></i>
-        &nbsp;<a href="/c/{{$elem.CategoryId}}">{{$elem.CategoryName}}</a>
+        {{range $catIndex, $cat := $elem.Categories}}
+        &nbsp;<a href="/cat/{{$cat.Slug}}">{{$cat.Name}}</a>
+        {{end}}
       </span>
       <span>
         <i class="iconfont icon-riqi"></i>
-        &nbsp;{{$elem.CreateAt}}
+        &nbsp;{{$elem.CreationTime}}
       </span>
       <span>
         <i class="iconfont icon-yanjing"></i>
