--- a/src/Dotnet9.Web.Go/template/layout/footer.html
+++ b/src/Dotnet9.Web.Go/template/layout/footer.html
@@ -6,7 +6,7 @@
   </div>
   <div>
     Dotnet9.com | Powered by <a href="https://github.com/dotnet9/Dotnet9" target="__blank">沙漠尽头的狼</a>
-    Golang
+    Golang & Dotnet & React
   </div>
 </footer>
 {{ end }}
