--- a/src/Dotnet9.Web.Go/template/layout/personal.html
+++ b/src/Dotnet9.Web.Go/template/layout/personal.html
@@ -23,7 +23,7 @@
       {{range $index,$elem := .Categories}}
       <div>
         <i class="iconfont icon-fenlei-copy"></i>
-        <a href="/cat/{{$elem.Slug}}">{{$elem.Name}}</a>
+        <a href="/c/{{$elem.Slug}}">{{$elem.Name}}</a>
       </div>
       {{end}}
     </div>
