添加上评论功能，valine配置写到配置文件中；

--- a/src/Dotnet9.Web.Go/template/custom.html
+++ b/src/Dotnet9.Web.Go/template/custom.html
@@ -18,7 +18,7 @@
 <main class="container">
   <link rel="stylesheet" href="/resource/css/detail.css" />
   {{if .Valine}}
-  <script src="{{.CdnURL}}/js/valine.min.js"></script>
+  <script src="//unpkg.com/valine/dist/Valine.min.js"></script>
   {{end}}
   <div class="detail">
     <div class="detail-left">
