--- a/src/Dotnet9.Web.Go/template/detail.html
+++ b/src/Dotnet9.Web.Go/template/detail.html
@@ -18,7 +18,7 @@
 <main class="container">
 <link rel="stylesheet" href="/resource/css/detail.css" />
 {{if .Valine}}
-<script src="{{.CdnURL}}/js/valine.min.js"></script>
+<script src="//unpkg.com/valine/dist/Valine.min.js"></script>
 {{end}}
 <div class="detail">
   <div class="detail-left">
@@ -79,8 +79,8 @@
 <script>
   new Valine({
     el: "#vcomments",
-    appId: "{{.ValineAppid}}",
-    appKey: "{{.ValineAppkey}}",
+    appId: "{{.ValineAppId}}",
+    appKey: "{{.ValineAppKey}}",
     serverURLs: "{{.ValineServerURL}}",
     placeholder: "What are you talking about?"
   });
