--- a/src/Dotnet9.Web.Go/template/custom.html
+++ b/src/Dotnet9.Web.Go/template/custom.html
@@ -77,8 +77,8 @@
 <script>
   new Valine({
     el: "#vcomments",
-    appId: "{{.ValineAppid}}",
-    appKey: "{{.ValineAppkey}}",
+    appId: "{{.ValineAppId}}",
+    appKey: "{{.ValineAppKey}}",
     serverURLs: "{{.ValineServerURL}}",
     placeholder: "What are you talking about?"
   });
