添加分类文章列表；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -26,7 +26,7 @@
             {
                 <div>
                     <i class="iconfont icon-fenlei-copy"></i>
-                    <a href="/cat/@cat.Slug" target="_blank" title="@cat.Description">@cat.Name</a>
+                    <a href="/cat/@cat.Slug" title="@cat.Description">@cat.Name (@cat.BlogCount)</a>
                 </div>
             }
         </div>
