--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_3180954_chol8bk1q14.css"/>
     <link rel="stylesheet" href="/css/index.css" asp-append-version="true"/>
     <link rel="icon" href="/images/favicon.png" asp-append-version="true"/>
+    @await RenderSectionAsync("Headers", false)
 </head>
 <body>
 
