--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -1,5 +1,18 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
 @inject ICategoryService CategoryService
+@inject IMemoryCacheHelper CacheHelper
+
+@{
+    const string cacheKey = "PersonalPartial";
+
+    async Task<List<CategoryBrief>?> GetCategoryFromDb()
+    {
+        return await CategoryService.GetCategoriesAsync();
+    }
+
+    var categories = await CacheHelper.GetOrCreateAsync(cacheKey,
+        async e => await GetCategoryFromDb());
+}
 
 <div class="personal">
     <div class="personal-box">
@@ -22,7 +35,7 @@
     <div class="personal-box">
         <div class="personal-cteg">
             <h2>分类：</h2>
-            @foreach (var cat in await CategoryService.GetCategoriesAsync())
+            @foreach (var cat in categories)
             {
                 <div>
                     <i class="iconfont icon-fenlei-copy"></i>
