--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/_ViewImports.cshtml
@@ -3,5 +3,7 @@
 @using Dotnet9.Commons
 @using Microsoft.EntityFrameworkCore
 @using Dotnet9.Web.Service.Categories
+@using Dotnet9.ASPNETCore
+@using Dotnet9.Web.ViewModel.Categories
 @namespace Dotnet9.Web.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
