记录阅读量；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/BlogPosts/Index.cshtml
@@ -2,6 +2,7 @@
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @model IndexModel
 @{
+    ViewData["Title"] = Model.BlogPost?.Title;
 }
 
 @section Headers{
