--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -1,6 +1,31 @@
-﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
+﻿@using Dotnet9.Web.ViewModel.Links
+@inject IOptionsSnapshot<SiteOptions> SiteOptions
+@inject ILinkService LinkService
+@inject IMemoryCacheHelper CacheHelper
+
+@{
+    const string cacheKey = "FooterPartial";
+
+    async Task<List<LinkBrief>?> GetLinkFromDb()
+    {
+        return await LinkService.GetListAsync();
+    }
+
+    var links = await CacheHelper.GetOrCreateAsync(cacheKey,
+        async e => await GetLinkFromDb());
+}
 
 <footer>
+    <div style="margin: 0 30px;">
+        友情链接：&nbsp;
+        @if (links is {Count: > 0 })
+        {
+            foreach (var link in links)
+            {
+                <span><a href="@link.Url" target="_blank" title="@link.Description">@link.Name</a>&nbsp;|&nbsp;</span>
+            }
+        }
+    </div>
     <div>
         Copyright © @(SiteOptions.Value.Start)-@(DateTime.Now.Year) &nbsp;
         &nbsp; | @SiteOptions.Value.Domain & @SiteOptions.Value.Owner 版权所有
