--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -13,7 +13,7 @@
                 <li><a href="/">首页</a></li>
                 <li><a href="/cat/dotnet">Dotnet</a></li>
                 <li><a href="/cat/more-language-go">Go语言</a></li>
-                <li><a href="/pigeonhole">归档</a></li>
+                <li><a href="/archive">归档</a></li>
                 <li><a href="/about">关于</a></li>
             </ul>
         </div>
