修改分类文章分页问题；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Categories/Index.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/cat/{Slug}"
+﻿@page "/cat/{Slug}/"
 @inject IOptionsSnapshot<SiteOptions> SiteOptions
 @using Dotnet9.Web.ViewModel.Commons
 @model IndexModel
