添加百度统计，后面可做到配置里去；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_Layout.cshtml
@@ -10,6 +10,16 @@
     <link rel="stylesheet" href="//at.alicdn.com/t/font_3180954_chol8bk1q14.css"/>
     <link rel="stylesheet" href="/css/index.css" asp-append-version="true"/>
     <link rel="icon" href="/images/favicon.png" asp-append-version="true"/>
+    <script>
+        var _hmt = _hmt || [];
+        (function () {
+            var hm = document.createElement("script");
+            hm.src = "https://hm.baidu.com/hm.js?b1c5c62f256893710ae912468261bf6b";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
     @await RenderSectionAsync("Headers", false)
 </head>
 <body>
