修改redis做为前台缓存；

--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_FooterPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
 @inject ILinkService LinkService
-@inject IMemoryCacheHelper CacheHelper
+@inject IDistributedCacheHelper CacheHelper
 
 @{
     const string cacheKey = "FooterPartial";
