--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_PersonalPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@inject IOptionsSnapshot<SiteOptions> SiteOptions
 @inject ICategoryService CategoryService
-@inject IMemoryCacheHelper CacheHelper
+@inject IDistributedCacheHelper CacheHelper
 
 @{
     const string cacheKey = "PersonalPartial";
