--- a/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
+++ b/src/Dotnet9.Web.RazorPages/Dotnet9.Web/Pages/Shared/_HeaderPartial.cshtml
@@ -12,7 +12,7 @@
             <ul class="header-nav">
                 <li><a href="/">首页</a></li>
                 <li><a href="/cat/dotnet">Dotnet</a></li>
-                <li><a href="/cat/more-language-go">Go语言</a></li>
+                <li><a href="https://go.dotnet9.com">Go版本博客</a></li>
                 <li><a href="/archive">归档</a></li>
                 <li><a href="/about">关于</a></li>
             </ul>
